--- a/pagina/index.html
+++ b/pagina/index.html
@@ -40,7 +40,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2>🎓 Colegio San José</h2>
+                <h2>🎓 Colegio 30 Victor Mercante</h2>
             </div>
             <ul class="nav-menu">
                 <li><a href="#inicio">Inicio</a></li>
@@ -173,7 +173,6 @@
                                 <button class="delete-btn" onclick="deleteNews(2)">🗑️</button>
                             </div>
                         </div>
-                        <p>Nos complace anunciar la inauguración de nuestras nuevas instalaciones deportivas que incluyen una cancha de básquet renovada y un área de ejercicios al aire libre.</p>
                         <div class="news-meta">
                             <span class="date">📅 5 de Agosto, 2025</span>
                             <span class="author">👤 Administrador</span>
@@ -190,9 +189,9 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>📍 Contacto</h3>
-                    <p>📧 info@colegiosanjose.edu.ar</p>
+                    <p>📧 info@colegio30victor.edu.ar</p>
                     <p>📞 (011) 4567-8900</p>
-                    <p>🏠 amdonaegui 3143, Buenos Aires</p>
+                    <p>🏠 andonaegui 3143, Buenos Aires</p>
                 </div>
                 <div class="footer-section">
                     <h3>⏰ Horarios</h3>
@@ -530,4 +529,5 @@
         });
     </script>
 </body>
+
 </html>
