--- a/pagina/index.html
+++ b/pagina/index.html
@@ -40,7 +40,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2>🎓 Colegio San José</h2>
+                <h2>🎓 Colegio 30 Victor Mercante</h2>
             </div>
             <ul class="nav-menu">
                 <li><a href="#inicio">Inicio</a></li>
@@ -164,12 +164,10 @@
                     </div>
                     <div class="news-card" data-news-id="2">
                         <div class="news-header">
-                            <h3>🏃‍♂️ Nuevas instalaciones deportivas</h3>
                             <div class="news-actions hidden">
                                 <button class="delete-btn" onclick="deleteNews(2)">🗑️</button>
                             </div>
                         </div>
-                        <p>Inauguración de nuevas instalaciones deportivas: cancha de básquet y área de ejercicios.</p>
                         <div class="news-meta">
                             <span class="date">📅 5 de Agosto, 2025</span>
                             <span class="author">👤 Administrador</span>
@@ -186,9 +184,9 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>📍 Contacto</h3>
-                    <p>📧 info@colegiosanjose.edu.ar</p>
+                    <p>📧 info@colegiovictor.edu.ar</p>
                     <p>📞 (011) 4567-8900</p>
-                    <p>🏠 Calle Principal 123, Buenos Aires</p>
+                    <p>🏠 andonaegui 2231, Buenos Aires</p>
                 </div>
                 <div class="footer-section">
                     <h3>⏰ Horarios</h3>
@@ -202,7 +200,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Colegio San José. Todos los derechos reservados.</p>
+                <p>&copy; 2025 Colegio 30 Victor Mercante. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
@@ -337,3 +335,4 @@
     </script>
 </body>
 </html>
+
